# spacegate

./: .gitignore  Cargo.toml  README.md
benchtimedb/frontend/: index.html  package-lock.json  package.json
benchtimedb/frontend/src/: App.tsx  Stdb.tsx
benchtimedb/frontend/src/module_bindings/: add_data_reducer.ts  add_log_reducer.ts  clock_sync_table.ts  clock_sync_type.ts  connect_reducer.ts  data_table.ts  data_type.ts  delete_data_table.ts  delete_data_type.ts  delete_data_worker_reducer.ts  index.ts  logs_table.ts  logs_type.ts
benchtimedb/module/: Lib.cs
client/: Cargo.toml
client/src/: main.rs
example/: Dockerfile  docker-compose.yml
proxy/: Cargo.toml
proxy/src/: main.rs
