[package]
name = "spacegate-proxy"
version = "1.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.37", features = ["derive"] }
iroh = "0.35.0"
tokio = "1.44.1"
tokio-rustls = "0.26.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
webpki-roots = "1.0.0"
